# UR5_robotiq

./: README.md
robotiq/robotiq_2f_140_gripper_visualization/: package.xml
robotiq/robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro
robotiq/robotiq_3f_gripper_visualization/cfg/: robotiq-3f-gripper_articulated.urdf  robotiq-3f-gripper_articulated_macro.xacro  robotiq-3f-gripper_articulated_macro_old.xacro  robotiq-3f-gripper_finger_articulated_macro.xacro  robotiq.transmission.xacro  robotiq_hand_macro.urdf.xacro
universal_robot/summer/: Gazebo-README.md
universal_robot/summer/summer_description/: CMakeLists.txt  package.xml
universal_robot/summer/summer_gazebo/: CMakeLists.txt  ee_topic.py  gazebo_teleop_deep.py  gazebo_teleop_key_xyz.py  gazebo_topic_xyz.py  gripper_test.py  package.xml  table_topic.py
universal_robot/ur5_moveit_config/launch/: planning_context.launch
universal_robot/ur_description/urdf/: common.left.xacro  common.right.xacro  my_robot.urdf  transmission_left.xacro  transmission_right.xacro  ur.gazebo.xacro  ur5.urdf.xacro  ur5_left.urdf.xacro  ur5_right.urdf.xacro
universal_robot/ur_driver/: gazebo_move.py  gazebo_teleop_key.py  gazebo_teleop_key_xyz.py
universal_robot/ur_gazebo/controller/: arm_controller_ur5.yaml  gazebo_ros_control_params.yaml  (+1 more)
universal_robot/ur_kinematics/: CMakeLists.txt  package.xml  test.py
universal_robot/ur_kinematics/src/: ur_kin.cpp  ur_kin_wrapper.cpp
universal_robot/ur_kinematics/src/ur_kinematics/: __init__.py  _ur_kin_wrapper_py.py
(+27 files in other folders)
